--- a/{{cookiecutter.repo_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.repo_name}}/.pre-commit-config.yaml
@@ -6,21 +6,21 @@ repos:
     name: isort
     stages: [commit]
     language: system
-    entry: pipenv run isort
+    entry: python3 -m isort
     types: [python]
 
   - id: black
     name: black
     stages: [commit]
     language: system
-    entry: pipenv run black
+    entry: python3 -m black
     types: [python]
 
   - id: flake8
     name: flake8
     stages: [commit]
     language: system
-    entry: pipenv run flake8
+    entry: python3 -m flake8
     types: [python]
     exclude: setup.py
 
@@ -28,7 +28,7 @@ repos:
     name: mypy
     stages: [commit]
     language: system
-    entry: pipenv run mypy
+    entry: python3 -m mypy
     types: [python]
     require_serial: true
 
@@ -36,7 +36,7 @@ repos:
     name: pytest
     stages: [commit]
     language: system
-    entry: pipenv run pytest
+    entry: python3 -m pytest
     types: [python]
     pass_filenames: false
 
@@ -44,6 +44,6 @@ repos:
     name: pytest
     stages: [push]
     language: system
-    entry: pipenv run pytest --cov --cov-fail-under=100
+    entry: python3 -m pytest --cov --cov-fail-under=100
     types: [python]
     pass_filenames: false
